2007-11-14  Richard Jones  <rjones@redhat.com>

	* Makefile.in: New rules for releasing and uploading.

2007-11-14  Richard Jones  <rjones@redhat.com>

	* libvirt/libvirt.mli, libvirt/libvirt.ml, libvirt/libvirt_c.c:
	  Added support for virNodeGetFreeMemory and virNodeGetCellsFreeMemory
	* mlvirsh/mlvirsh.ml: Added 'freecell' command.

2007-10-19  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top_calendar.ml: Added --end-time option.
	  Extra optional dep on ocaml-calendar.
	* virt-top/virt-top.pod: Document how to compress and split
	  CSV files.  Document --end-time option and time formats.
	* virt-top/virt_top.ml: Allow sub-second delays when in batch
	  and script mode.
	* virt-top/virt_top_utils.mli, virt-top/virt_top.mli: Reorganise
	  the code and add some interfaces.

2007-10-17  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top.ml: Added --script option.
	* virt-top/virt_top.ml: Log domain data to CSV file.
	* virt-top/virt_top.ml: Added --no-csv-cpu, --no-csv-block and
	  --no-csv-net flags.
	* virt-top/*.ml: Much code clean-up and restructuring.
	* *: Added GNU GPL/LGPL copyright messages to all files.

2007-09-27  Richard Jones  <rjones@redhat.com>

	* configure.ac: Changed version to 0.3.2.9.
	* Makefile.in: Re-enable virt-df.
	* virt-df/virt_df*.ml: Mostly finished off the core of virt-df.
	  Ext2/3 support.  No LVM as yet.
	* virt-df/README: Added README file.

2007-09-24  Richard Jones  <rjones@redhat.com>

	* configure.ac: Version 0.3.2.8 for release.
	* virt-top/virt-top.ml, virt-top/virt-top.pod: Support for
	  $HOME/.virt-toprc init file, modelled after top.
	* virt-top/virt_top_utils.ml: Split out string utilities
	  into a separate file.

2007-09-20  Richard Jones  <rjones@redhat.com>

	* virt-top/virt_top.ml: qemu:/// URIs (and others) don't support
	  virConnectGetHostname.  Catch this exception.

	* Makefile.in: Disable virt-df in this release until I have
	  time to fix it properly.